# plugin-animations

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml  pre-commit.yml
src/: AnimatedButton.cpp  AnimatedButton.hpp  AnimatedProperty.hpp  Animation.hpp  AnimationTimer.cpp  AnimationTimer.hpp  AnimationTrigger.hpp  BannerCarousel.hpp  CubicInterpolation.hpp  Keyframe.hpp  KeyframeProperty.hpp  KeyframeTraits.hpp  LoaderCarousel.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp  MouseHoverListener.hpp  TabSelector.cpp  TabSelector.hpp  Time.hpp  TimingFunction.hpp  Transition.hpp  TransitionProperty.hpp  TransitionTimer.cpp  TransitionTimer.hpp  TransitionTraits.hpp  TrimPathEffect.cpp
src/animation/: Animation.hpp  AnimationDirection.hpp  AnimationTimer.cpp  AnimationTimer.hpp  Keyframe.hpp  KeyframeProperty.hpp  TimingFunction.hpp  Transition.hpp  TransitionProperty.hpp
src/neo/: AnimatedButton.cpp  AnimatedButton.hpp  BannerCarousel.hpp  LoaderCarousel.hpp  MainComponent.cpp  MainComponent.hpp  TabSelector.cpp  TrimPathEffect.hpp
src/neo/animations/: Animation.cpp  Animation.hpp  AnimationDirection.hpp  AnimationTimer.cpp  AnimationTimer.hpp  Keyframe.hpp  KeyframeInterpolator.hpp  KeyframeProperty.hpp  KeyframeTimer.cpp  KeyframeTimer.hpp  KeyframeTraits.hpp  TimingFunction.hpp  Transition.cpp  Transition.hpp  TransitionProperty.hpp
src/neo/components/: AnimatedButton.cpp  AnimatedButton.hpp  BannerCarousel.hpp  LoaderCarousel.hpp  MouseHoverListener.hpp  TabSelector.cpp  TabSelector.hpp
src/neo/examples/: BannerExamples.cpp  BannerExamples.hpp  GridExamples.cpp  GridExamples.hpp  PathExamples.cpp  PathExamples.hpp  TimingExamples.cpp  TimingExamples.hpp  TransitionExamples.cpp  TransitionExamples.hpp  WidgetsExamples.cpp  WidgetsExamples.hpp
src/neo/graphics/: TrimPathEffect.cpp  TrimPathEffect.hpp
